--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ input, textarea {
   vertical-align: middle;
 }
 
-input[type="submit"] {
+input[type="submit"], button {
   display: block;
   width: 60%;
   margin: 1em auto;
